# bch_sc2_OFEC

./: CMakeLists.txt  cmake_vs2019.bat
OFEC/: .gitignore  CMakeLists.txt
OFEC/core/: definition.h  instance_manager.cpp
OFEC/core/algorithm/: algorithm.h  encoding.h  solution.h
OFEC/core/problem/: domain.h  problem.h
OFEC/core/problem/continuous/: continuous.h  function.cpp  function.h
OFEC/core/problem/uncertainty/: dynamic.h  noisy.h
OFEC/core/record/: record.cpp
OFEC/instance/algorithm/constrained/dcnsgaii_de/: dcnsgaii_de.h
OFEC/instance/record/: rcr_vec_real.h
OFEC/ofec/: CMakeLists.txt  SrcFiles.cmake
OFEC/ofec/run/: custom_record.cpp  include_algorithm.h  include_problem.h  main.cpp  register_algorithm.cpp  register_problem.cpp
OFEC/run/: custom_parameter.cpp  main.cpp  prime_method.h
OFEC/test/: test_DOP.cpp  test_Tt_fun.cpp  test_clustering.cpp  test_matrix.cpp  test_nondominated_sorting.cpp
OFEC/utility/: functional.h  min_max_heap.h  types.h  vector.cpp
OFEC/utility/CubicSpline/: CubicSpline.cpp
OFEC/utility/clustering/: apc.h  apd.h  hslh.h  nbc.h
OFEC/utility/noisy_fun/: noisy_fun.h
OFEC/utility/nondominated_sorting/: filter_sort.h
OFEC/utility/random/: extreal.h
OFEC/utility/typevar/: typevar.cpp  typevar.h
project/OFEC_sc2/: CMakeLists.txt  Files.cmake  OFEC Filter.lnk  tasks.txt  toDoList.md
project/OFEC_sc2/core/: global.cpp  global.h  instance_manager.h
project/OFEC_sc2/core/algorithm/: algorithm.cpp  encoding.cpp  individual.h  multi_population.h  population.h  termination.cpp  termination.h
project/OFEC_sc2/core/problem/: optima.h  problem.cpp
project/OFEC_sc2/core/record/: record.h
project/OFEC_sc2/instance/record/: rcr_vec_real.cpp
project/OFEC_sc2/run/: custom_method.h  custom_record.cpp  main.cpp  prime_method.cpp  run.cpp
project/OFEC_sc2/test/: test_MMOP.cpp  test_MOP.cpp  test_core_fun.cpp  test_example.cpp  test_kd_tree.cpp
project/OFEC_sc2/utility/: elementary_function.cpp  elementary_function.h  factory.h  logistic_regression.h  matrix.cpp  matrix.h  myexcept.h  vector.h
project/OFEC_sc2/utility/CubicSpline/: CubicSpline.h
project/OFEC_sc2/utility/clustering/: group.h
project/OFEC_sc2/utility/kd-tree/: kdtree_space.h
project/OFEC_sc2/utility/nondominated_sorting/: fast_sort.h
project/OFEC_sc2/utility/random/: extreal.cpp  newran.cpp  newran.h
(+851 files in other folders)
