cmake_minimum_required(VERSION 3.10)
project(OFEC)
find_package(Threads)
set(CMAKE_CXX_FLAGS -pthread)
set(OFEC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
IF (WIN32)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHs")
ENDIF (WIN32)
add_definitions(-DOFEC_DIR="${OFEC_DIR}")
include(SrcFiles.cmake)
add_executable(OFEC ${OFEC_SOURCES} )
target_compile_features(OFEC PRIVATE cxx_std_17)

if (LIBTORCH_REQUIRED)
    if(CMAKE_BUILD_TYPE MATCHES "Debug")
        set(Torch_DIR "$ENV{LIBTORCH_DIR_DEBUG}/share/cmake/Torch")
    elseif (CMAKE_BUILD_TYPE MATCHES "Release" OR CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
        set(Torch_DIR "$ENV{LIBTORCH_DIR_RELEASE}/share/cmake/Torch")
    else()
        message(STATUS "build type unknown")
    endif()
    find_package(Torch REQUIRED)
    target_link_libraries(${CMAKE_PROJECT_NAME} ${TORCH_LIBRARIES})
endif (LIBTORCH_REQUIRED)
